--- a/react-ssr-13/package.json
+++ b/react-ssr-13/package.json
@@ -12,7 +12,7 @@
     "dev:build:server": "webpack --config ./build/webpack.server.dev.config.js --watch",
     "dev:build:client": "webpack --config ./build/webpack.client.dev.config.js --watch",
     "dev": "npm run rm && npm-run-all --parallel dev:**",
-    "devstart": "nodemon --watch server --exec node ./server/bundle.js",
+    "dev:start": "nodemon --watch server --exec node ./server/bundle.js",
     "lint": "eslint --ext .js,.jsx src",
     "lint-fix": "eslint --fix --ext .js,.jsx src"
   },
@@ -20,7 +20,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "antd": "^3.11.2",
+    "antd": "^3.23.2",
     "axios": "^0.18.0",
     "express": "^4.16.3",
     "express-http-proxy": "^1.4.0",
@@ -28,8 +28,8 @@
     "react-dom": "^16.5.2",
     "react-mixin": "^5.0.0",
     "react-redux": "^5.0.7",
-    "react-router-config": "^4.4.0-beta.1",
-    "react-router-dom": "^4.3.1",
+    "react-router-config": "^5.0.1",
+    "react-router-dom": "^5.0.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
   },
