--- a/react-ssr-14/.eslintrc
+++ b/react-ssr-14/.eslintrc
@@ -23,7 +23,8 @@
         "jsx-a11y/click-events-have-key-events": 0,
         "jsx-a11y/no-static-element-interactions": 0,
         "react/no-array-index-key": 0,
-        "no-underscore-dangle": 0
+        "no-underscore-dangle": 0,
+        "no-restricted-globals": 0
     },
     "env": {
         "browser": true,
