--- a/react-ssr-14/package.json
+++ b/react-ssr-14/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^16.5.2",
     "react-mixin": "^5.0.0",
     "react-redux": "^5.0.7",
+    "react-router": "^5.0.1",
     "react-router-config": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.0",
