--- a/react-ssr-14/package.json
+++ b/react-ssr-14/package.json
@@ -12,15 +12,15 @@
     "dev:build:server": "webpack --config ./build/webpack.server.dev.config.js --watch",
     "dev:build:client": "webpack --config ./build/webpack.client.dev.config.js --watch",
     "dev": "npm run rm && npm-run-all --parallel dev:**",
-    "dev:start": "nodemon --watch server --exec node ./server/bundle.js",
-    "start:dev": "pm2 restart ecosystem.config.js --only react-ssr_dev",
-    "start:test": "pm2 restart ecosystem.config.js --only react-ssr_test",
-    "start:sim": "pm2 restart ecosystem.config.js --only react-ssr_sim",
-    "start:prod": "pm2 restart ecosystem.config.js --only react-ssr_prod",
-    "stop:dev": "pm2 stop react-ssr_dev && pm2 delete react-ssr_dev",
-    "stop:test": "pm2 stop react-ssr_test && pm2 delete react-ssr_test",
-    "stop:sim": "pm2 stop react-ssr_sim && pm2 delete react-ssr_sim",
-    "stop:prod": "pm2 stop react-ssr_prod && pm2 delete react-ssr_prod",
+    "start:dev": "nodemon --watch server --exec node ./server/bundle.js",
+    "start_dev": "pm2 restart ecosystem.config.js --only react-ssr_dev",
+    "start_test": "pm2 restart ecosystem.config.js --only react-ssr_test",
+    "start_sim": "pm2 restart ecosystem.config.js --only react-ssr_sim",
+    "start_prod": "pm2 restart ecosystem.config.js --only react-ssr_prod",
+    "stop_dev": "pm2 stop react-ssr_dev && pm2 delete react-ssr_dev",
+    "stop_test": "pm2 stop react-ssr_test && pm2 delete react-ssr_test",
+    "stop_sim": "pm2 stop react-ssr_sim && pm2 delete react-ssr_sim",
+    "stop_prod": "pm2 stop react-ssr_prod && pm2 delete react-ssr_prod",
     "lint": "eslint --ext .js,.jsx src",
     "lint-fix": "eslint --fix --ext .js,.jsx src"
   },
